2019-04-20  add preliminary content
Website title & tagline change.
Menu items name change & rearrange sequence.
Add text content to Home, Programs, About, & Contact.
Gallery become Testimonials.

--- a/wp-content/uploads/elementor/css/post-465.css
+++ b/wp-content/uploads/elementor/css/post-465.css
@@ -1,2 +1,6 @@
+.elementor-465 .elementor-element.elementor-element-7b08049 > .elementor-container {min-height: 200px;}
+.elementor-465 .elementor-element.elementor-element-7b08049 > .elementor-container:after {content: "";min-height: inherit;}
 .elementor-465 .elementor-element.elementor-element-zoazchl {margin-top: 20px;margin-bottom: 0px;}
+.elementor-465 .elementor-element.elementor-element-zjcjfic .gallery-item {padding: 0 30px 30px 0;}
+.elementor-465 .elementor-element.elementor-element-zjcjfic .gallery {margin: 0 -30px -30px 0;}
 .elementor-465 .elementor-element.elementor-element-zjcjfic .gallery-item .gallery-caption {text-align: center;}
