--- a/wp-content/uploads/elementor/css/post-445.css
+++ b/wp-content/uploads/elementor/css/post-445.css
@@ -1,4 +1,4 @@
-.elementor-445 .elementor-element.elementor-element-ixzcuep iframe {height: 380px;pointer-events: none;}
+.elementor-445 .elementor-element.elementor-element-ixzcuep iframe {height: 380px;}
 .elementor-445 .elementor-element.elementor-element-rvmudnr .elementor-spacer-inner {height: 60px;}
 .elementor-445 .elementor-element.elementor-element-krvwqem.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
 .elementor-445 .elementor-element.elementor-element-krvwqem.elementor-view-framed .elementor-icon, .elementor-445 .elementor-element.elementor-element-krvwqem.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
@@ -57,6 +57,20 @@
 .elementor-445 .elementor-element.elementor-element-czaqnod .elementor-icon-box-title {margin-bottom: 6px;}
 .elementor-445 .elementor-element.elementor-element-czaqnod .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 18px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
 .elementor-445 .elementor-element.elementor-element-czaqnod .elementor-icon-box-content .elementor-icon-box-description {color: #999;font-size: 14px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-framed .elementor-icon, .elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-framed .elementor-icon {background-color: #84c340;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-stacked .elementor-icon:hover {background-color: #84c340;color: #fff;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-framed .elementor-icon:hover, .elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-default .elementor-icon:hover {color: #84c340;border-color: #84c340;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-view-framed .elementor-icon:hover {background-color: #fff;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-position-right .elementor-icon-box-icon {margin-left: 24px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-position-left .elementor-icon-box-icon {margin-right: 24px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7.elementor-position-top .elementor-icon-box-icon {margin-bottom: 24px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon {font-size: 32px;padding: .8em;}
+.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon i {transform: rotate(0deg);}
+.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon-box-title {margin-bottom: 6px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 18px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
+.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon-box-content .elementor-icon-box-description {color: #999;font-size: 14px;}
 .elementor-445 .elementor-element.elementor-element-aqzubmx .elementor-spacer-inner {height: 30px;}
 .elementor-445 .elementor-element.elementor-element-zlljmjw .elementor-spacer-inner {height: 50px;}
 @media (max-width:1024px) {.elementor-445 .elementor-element.elementor-element-rvmudnr .elementor-spacer-inner {height: 50px;}
@@ -67,5 +81,6 @@
 	.elementor-445 .elementor-element.elementor-element-jtlkdht .elementor-icon-box-icon {margin-bottom: 24px;}
 	.elementor-445 .elementor-element.elementor-element-atwyndn .elementor-icon-box-icon {margin-bottom: 24px;}
 	.elementor-445 .elementor-element.elementor-element-czaqnod .elementor-icon-box-icon {margin-bottom: 24px;}
+	.elementor-445 .elementor-element.elementor-element-e08edb7 .elementor-icon-box-icon {margin-bottom: 24px;}
 	.elementor-445 .elementor-element.elementor-element-aqzubmx .elementor-spacer-inner {height: 50px;}
 	.elementor-445 .elementor-element.elementor-element-zlljmjw .elementor-spacer-inner {height: 50px;}}
