--- a/wp-content/uploads/elementor/css/post-355.css
+++ b/wp-content/uploads/elementor/css/post-355.css
@@ -2,7 +2,7 @@
 .elementor-355 .elementor-element.elementor-element-arduvcg > .elementor-background-overlay {background-color: #0003d6;opacity: .2;mix-blend-mode: color;transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-355 .elementor-element.elementor-element-arduvcg {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
 .elementor-355 .elementor-element.elementor-element-jmkaurx.elementor-widget-heading .elementor-heading-title {color: #fff;}
-.elementor-355 .elementor-element.elementor-element-jmkaurx .elementor-heading-title {font-size: 58px;font-weight: 300;text-transform: uppercase;line-height: 1.2em;letter-spacing: 1px;text-shadow: 0px 0px 20px #0c0000;}
+.elementor-355 .elementor-element.elementor-element-jmkaurx .elementor-heading-title {font-size: 58px;font-weight: 300;line-height: 1.2em;letter-spacing: 1px;text-shadow: 0px 0px 20px #0c0000;}
 .elementor-355 .elementor-element.elementor-element-362d7df.elementor-widget-heading .elementor-heading-title {color: #fff;}
 .elementor-355 .elementor-element.elementor-element-362d7df .elementor-heading-title {font-size: 20px;font-weight: 400;line-height: 1.5em;text-shadow: 0px 0px 5px #0c0000;}
 .elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button {font-size: 14px;text-transform: uppercase;letter-spacing: 1px;color: #84c340;background-color: #fff;border-radius: 2px 2px 2px 2px;padding: 15px 35px 15px 35px;}
@@ -77,28 +77,30 @@
 .elementor-355 .elementor-element.elementor-element-hfptsck .gallery {margin: 0 -30px -30px 0;}
 .elementor-355 .elementor-element.elementor-element-hfptsck .gallery-item img {border-radius: 5px 5px 5px 5px;}
 .elementor-355 .elementor-element.elementor-element-hfptsck .gallery-item .gallery-caption {text-align: center;}
-.elementor-355 .elementor-element.elementor-element-87c2b53:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-87c2b53 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://em-consulting.gq/wp-content/uploads/2019/04/cloud.jpg");background-position: center center;background-repeat: no-repeat;background-size: cover;}
-.elementor-355 .elementor-element.elementor-element-87c2b53 > .elementor-background-overlay {background-color: #fff;opacity: .8;transition: background .3s,border-radius .3s,opacity .3s;}
-.elementor-355 .elementor-element.elementor-element-87c2b53 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 80px 0px 30px 0px;}
-.elementor-355 .elementor-element.elementor-element-0ff4d4a {text-align: center;}
-.elementor-355 .elementor-element.elementor-element-0ff4d4a.elementor-widget-heading .elementor-heading-title {color: #292929;}
-.elementor-355 .elementor-element.elementor-element-0ff4d4a .elementor-heading-title {font-size: 34px;font-weight: 300;letter-spacing: 1px;}
-.elementor-355 .elementor-element.elementor-element-9fdf2a9 .elementor-divider-separator {border-top-style: solid;border-top-width: 1px;border-top-color: #222;width: 5%;}
-.elementor-355 .elementor-element.elementor-element-9fdf2a9 .elementor-divider {text-align: center;padding-top: 6px;padding-bottom: 6px;}
-.elementor-355 .elementor-element.elementor-element-b8c2085 {text-align: center;}
-.elementor-355 .elementor-element.elementor-element-b8c2085.elementor-widget-heading .elementor-heading-title {color: #888;}
-.elementor-355 .elementor-element.elementor-element-b8c2085 .elementor-heading-title {font-size: 18px;font-weight: 400;}
-.elementor-355 .elementor-element.elementor-element-b8c2085 > .elementor-widget-container {padding: 0px 0px 50px 0px;}
-.elementor-355 .elementor-element.elementor-element-56b9d43.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-355 .elementor-element.elementor-element-56b9d43.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
-.elementor-355 .elementor-element.elementor-element-6dcd281 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #ccc;border-radius: 5px 5px 5px 5px;box-shadow: 0px 0px 10px 3px #ccc;}
-.elementor-355 .elementor-element.elementor-element-60d9d0b.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-355 .elementor-element.elementor-element-60d9d0b.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
-.elementor-355 .elementor-element.elementor-element-54a3162 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #ccc;border-radius: 5px 5px 5px 5px;box-shadow: 0px 0px 10px 2px #ccc;}
-.elementor-355 .elementor-element.elementor-element-3df460d .elementor-spacer-inner {height: 50px;}
-.elementor-355 .elementor-element.elementor-element-3f464a9 {text-align: center;}
-.elementor-355 .elementor-element.elementor-element-3f464a9.elementor-widget-heading .elementor-heading-title {color: #888;}
-.elementor-355 .elementor-element.elementor-element-3f464a9 .elementor-heading-title {font-size: 15px;font-weight: 400;}
+.elementor-355 .elementor-element.elementor-element-634eac91:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-634eac91 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://em-consulting.gq/wp-content/uploads/2019/04/cloud.jpg");background-position: center center;background-repeat: no-repeat;background-size: cover;}
+.elementor-355 .elementor-element.elementor-element-634eac91 > .elementor-background-overlay {background-color: #fff;opacity: .8;transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-355 .elementor-element.elementor-element-634eac91 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 80px 0px 30px 0px;}
+.elementor-355 .elementor-element.elementor-element-5181363a {text-align: center;}
+.elementor-355 .elementor-element.elementor-element-5181363a.elementor-widget-heading .elementor-heading-title {color: #292929;}
+.elementor-355 .elementor-element.elementor-element-5181363a .elementor-heading-title {font-size: 34px;font-weight: 300;letter-spacing: 1px;}
+.elementor-355 .elementor-element.elementor-element-10e0b487 .elementor-divider-separator {border-top-style: solid;border-top-width: 1px;border-top-color: #222;width: 5%;}
+.elementor-355 .elementor-element.elementor-element-10e0b487 .elementor-divider {text-align: center;padding-top: 6px;padding-bottom: 6px;}
+.elementor-355 .elementor-element.elementor-element-2f936457 {text-align: center;}
+.elementor-355 .elementor-element.elementor-element-2f936457.elementor-widget-heading .elementor-heading-title {color: #898989;}
+.elementor-355 .elementor-element.elementor-element-2f936457 .elementor-heading-title {font-size: 16px;font-weight: 400;}
+.elementor-355 .elementor-element.elementor-element-2f936457 > .elementor-widget-container {padding: 0px 0px 50px 0px;}
+.elementor-355 .elementor-element.elementor-element-317785b3.elementor-column .elementor-column-wrap {align-items: center;}
+.elementor-355 .elementor-element.elementor-element-317785b3.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
+.elementor-355 .elementor-element.elementor-element-18b0beca > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #bbb;border-radius: 5px 5px 5px 5px;}
+.elementor-355 .elementor-element.elementor-element-bb50631.elementor-column .elementor-column-wrap {align-items: center;}
+.elementor-355 .elementor-element.elementor-element-bb50631.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
+.elementor-355 .elementor-element.elementor-element-7dd79db8 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #bbb;border-radius: 5px 5px 5px 5px;}
+.elementor-355 .elementor-element.elementor-element-2360d2e6.elementor-column .elementor-column-wrap {align-items: center;}
+.elementor-355 .elementor-element.elementor-element-2360d2e6.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
+.elementor-355 .elementor-element.elementor-element-6ae9562 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #bbb;border-radius: 5px 5px 5px 5px;}
+.elementor-355 .elementor-element.elementor-element-70e20e3 .elementor-spacer-inner {height: 10px;}
+.elementor-355 .elementor-element.elementor-element-7c12c415 .elementor-text-editor {text-align: center;}
+.elementor-355 .elementor-element.elementor-element-b4f4432 .elementor-spacer-inner {height: 50px;}
 .elementor-355 .elementor-element.elementor-element-dd68bca:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-dd68bca > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #84c340;}
 .elementor-355 .elementor-element.elementor-element-dd68bca {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 20px 0px 20px 0px;}
 .elementor-355 .elementor-element.elementor-element-dd68bca > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
@@ -201,7 +203,7 @@
 	.elementor-355 .elementor-element.elementor-element-qjxjzhx .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 30px;}
 	.elementor-355 .elementor-element.elementor-element-ecogpvs .elementor-heading-title {font-size: 26px;}
-	.elementor-355 .elementor-element.elementor-element-0ff4d4a .elementor-heading-title {font-size: 26px;}
+	.elementor-355 .elementor-element.elementor-element-5181363a .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-611d2e8 {font-size: 20px;}
 	.elementor-355 .elementor-element.elementor-element-wjbhjqp .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-cdclnjx .elementor-icon-box-icon {margin-bottom: 20px;}
@@ -216,11 +218,13 @@
 	.elementor-355 .elementor-element.elementor-element-mcwoycn {width: 62.807%;}
 	.elementor-355 .elementor-element.elementor-element-qevarhe {width: 40.395%;}
 	.elementor-355 .elementor-element.elementor-element-sybclyl {width: 59.641%;}
-	.elementor-355 .elementor-element.elementor-element-94720bd {width: 20%;}
-	.elementor-355 .elementor-element.elementor-element-56b9d43 {width: 79.998%;}
-	.elementor-355 .elementor-element.elementor-element-1ab8d01 {width: 20%;}
-	.elementor-355 .elementor-element.elementor-element-60d9d0b {width: 79.998%;}}
+	.elementor-355 .elementor-element.elementor-element-90dc063 {width: 20%;}
+	.elementor-355 .elementor-element.elementor-element-317785b3 {width: 79.998%;}
+	.elementor-355 .elementor-element.elementor-element-33479388 {width: 20%;}
+	.elementor-355 .elementor-element.elementor-element-bb50631 {width: 79.998%;}
+	.elementor-355 .elementor-element.elementor-element-515fe60e {width: 20%;}
+	.elementor-355 .elementor-element.elementor-element-2360d2e6 {width: 79.998%;}}
 @media (min-width:1025px) {.elementor-355 .elementor-element.elementor-element-arduvcg:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-arduvcg > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
 	.elementor-355 .elementor-element.elementor-element-rejxuiu:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-rejxuiu > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
 	.elementor-355 .elementor-element.elementor-element-a073725:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-a073725 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
-	.elementor-355 .elementor-element.elementor-element-87c2b53:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-87c2b53 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}}
+	.elementor-355 .elementor-element.elementor-element-634eac91:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-634eac91 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}}
