--- a/wp-content/uploads/elementor/css/post-465.css
+++ b/wp-content/uploads/elementor/css/post-465.css
@@ -16,6 +16,9 @@
 .elementor-465 .elementor-element.elementor-element-6b28110.elementor-column .elementor-column-wrap {align-items: center;}
 .elementor-465 .elementor-element.elementor-element-6b28110.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
 .elementor-465 .elementor-element.elementor-element-66bc91c > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #bbb;border-radius: 5px 5px 5px 5px;}
+.elementor-465 .elementor-element.elementor-element-8538b90.elementor-column .elementor-column-wrap {align-items: center;}
+.elementor-465 .elementor-element.elementor-element-8538b90.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
+.elementor-465 .elementor-element.elementor-element-331b974 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 10px 20px 10px 20px;border-style: solid;border-width: 1px 1px 1px 1px;border-color: #bbb;border-radius: 5px 5px 5px 5px;}
 .elementor-465 .elementor-element.elementor-element-2f07804 .elementor-spacer-inner {height: 50px;}
 .elementor-465 .elementor-element.elementor-element-19f7c2a .elementor-text-editor {text-align: center;}
 .elementor-465 .elementor-element.elementor-element-7b08049 > .elementor-container {min-height: 200px;}
@@ -23,32 +26,11 @@
 .elementor-465 .elementor-element.elementor-element-7b08049 {padding: 0px 0px 0px 0px;}
 .elementor-465 .elementor-element.elementor-element-c94cbb4 .elementor-divider-separator {border-top-style: dashed;border-top-width: 2px;border-top-color: #bbb;width: 100%;}
 .elementor-465 .elementor-element.elementor-element-c94cbb4 .elementor-divider {text-align: center;padding-top: 15px;padding-bottom: 15px;}
-.elementor-465 .elementor-element.elementor-element-b5e305a > .elementor-container {min-height: 200px;}
-.elementor-465 .elementor-element.elementor-element-b5e305a > .elementor-container:after {content: "";min-height: inherit;}
-.elementor-465 .elementor-element.elementor-element-b5e305a {padding: 0px 0px 0px 0px;}
-.elementor-465 .elementor-element.elementor-element-e422756 {margin-top: 20px;margin-bottom: 20px;}
-.elementor-465 .elementor-element.elementor-element-becc757.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-465 .elementor-element.elementor-element-becc757.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
-.elementor-465 .elementor-element.elementor-element-1b59b99.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-465 .elementor-element.elementor-element-1b59b99.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
-.elementor-465 .elementor-element.elementor-element-4fecd67 .elementor-text-editor {text-align: left;}
-.elementor-465 .elementor-element.elementor-element-4fecd67 {font-family: "Artifika",Sans-serif;}
-.elementor-465 .elementor-element.elementor-element-4fecd67 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 9px 20px 10px 20px;background-color: rgba(191,70,100,.02);border-style: solid;border-width: 1px 1px 1px 1px;border-radius: 5px 5px 5px 5px;box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);}
-.elementor-465 .elementor-element.elementor-element-6fb6447 {margin-top: 20px;margin-bottom: 20px;}
-.elementor-465 .elementor-element.elementor-element-bb94fb3.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-465 .elementor-element.elementor-element-bb94fb3.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
-.elementor-465 .elementor-element.elementor-element-77e92d4 .elementor-text-editor {text-align: left;}
-.elementor-465 .elementor-element.elementor-element-77e92d4 {font-family: "Artifika",Sans-serif;}
-.elementor-465 .elementor-element.elementor-element-77e92d4 > .elementor-widget-container {margin: 5px 5px 5px 5px;padding: 9px 20px 10px 20px;background-color: rgba(214,160,0,.04);border-style: solid;border-width: 1px 1px 1px 1px;border-radius: 5px 5px 5px 5px;box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);}
-.elementor-465 .elementor-element.elementor-element-cbe4800.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-465 .elementor-element.elementor-element-cbe4800.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;}
 @media (min-width:768px) {.elementor-465 .elementor-element.elementor-element-283486f {width: 20%;}
 	.elementor-465 .elementor-element.elementor-element-6d325c3 {width: 79.998%;}
 	.elementor-465 .elementor-element.elementor-element-068cf7b {width: 20%;}
 	.elementor-465 .elementor-element.elementor-element-6b28110 {width: 79.998%;}
-	.elementor-465 .elementor-element.elementor-element-becc757 {width: 20%;}
-	.elementor-465 .elementor-element.elementor-element-1b59b99 {width: 79.932%;}
-	.elementor-465 .elementor-element.elementor-element-bb94fb3 {width: 79.932%;}
-	.elementor-465 .elementor-element.elementor-element-cbe4800 {width: 20%;}}
+	.elementor-465 .elementor-element.elementor-element-17e9cd2 {width: 20%;}
+	.elementor-465 .elementor-element.elementor-element-8538b90 {width: 79.998%;}}
 @media (min-width:1025px) {.elementor-465 .elementor-element.elementor-element-d5bdd08:not(.elementor-motion-effects-element-type-background), .elementor-465 .elementor-element.elementor-element-d5bdd08 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}}
 @media (max-width:767px) {.elementor-465 .elementor-element.elementor-element-c5d13bd .elementor-heading-title {font-size: 26px;}}
