2019-08-02 further polish Japanese translation
Edi further polish Japanese translation overall.
HomePage green button invert color.
HomePage - Edi changed text block "The Finders Course is an intense program...", adjust text size, spacing, margin for all 3 display sizes.
Testimonial Page - background image full width.
Contact Me / Connect with me - add 5th block "Art Work" website.
change all email to FC@EdiMatsumoto.com.
WordPress > Settings > Discussion > disable comment (first 3 options).
WordPress > Media - delete un-used pictures (from 2016/09 Theme Sample Data).

--- a/wp-content/uploads/elementor/css/post-355.css
+++ b/wp-content/uploads/elementor/css/post-355.css
@@ -5,8 +5,8 @@
 .elementor-355 .elementor-element.elementor-element-jmkaurx .elementor-heading-title {font-size: 58px;font-weight: 300;line-height: 1.2em;letter-spacing: 1px;text-shadow: 0px 0px 20px #0c0000;}
 .elementor-355 .elementor-element.elementor-element-362d7df.elementor-widget-heading .elementor-heading-title {color: #fff;}
 .elementor-355 .elementor-element.elementor-element-362d7df .elementor-heading-title {font-size: 20px;font-weight: 400;line-height: 1.5em;text-shadow: 0px 0px 5px #0c0000;}
-.elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button {font-size: 14px;text-transform: uppercase;letter-spacing: 1px;color: #84c340;background-color: #fff;border-radius: 2px 2px 2px 2px;padding: 15px 35px 15px 35px;}
-.elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button:hover, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button:hover, .elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button:focus, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button:focus {color: #fff;background-color: #84c340;}
+.elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button {font-size: 14px;text-transform: uppercase;letter-spacing: 1px;color: #fff;background-color: #84c340;border-radius: 2px 2px 2px 2px;padding: 15px 35px 15px 35px;}
+.elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button:hover, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button:hover, .elementor-355 .elementor-element.elementor-element-rwyawhg a.elementor-button:focus, .elementor-355 .elementor-element.elementor-element-rwyawhg .elementor-button:focus {color: #84c340;background-color: #fff;}
 .elementor-355 .elementor-element.elementor-element-vnynvjk {padding: 60px 0px 30px 0px;}
 .elementor-355 .elementor-element.elementor-element-wzrxkkb {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-wzrxkkb.elementor-widget-heading .elementor-heading-title {color: #292929;}
@@ -57,12 +57,15 @@
 .elementor-355 .elementor-element.elementor-element-a073725 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 80px 0px 80px 0px;}
 .elementor-355 .elementor-element.elementor-element-5e8419b {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-5e8419b.elementor-widget-heading .elementor-heading-title {color: #fff;}
-.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 56px;font-weight: 300;line-height: 1.3em;letter-spacing: 1px;text-shadow: 0px 0px 10px #0a0002;}
-.elementor-355 .elementor-element.elementor-element-3f8e748 .elementor-divider-separator {border-top-style: solid;border-top-width: 1px;border-top-color: #fff;width: 5%;}
-.elementor-355 .elementor-element.elementor-element-3f8e748 .elementor-divider {text-align: center;padding-top: 10px;padding-bottom: 10px;}
-.elementor-355 .elementor-element.elementor-element-d76c0d4 {text-align: center;}
-.elementor-355 .elementor-element.elementor-element-d76c0d4.elementor-widget-heading .elementor-heading-title {color: #ddd;}
-.elementor-355 .elementor-element.elementor-element-d76c0d4 .elementor-heading-title {font-size: 18px;font-weight: 400;}
+.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 34px;font-weight: 400;line-height: 2em;letter-spacing: 1px;}
+.elementor-355 .elementor-element.elementor-element-5e8419b > .elementor-widget-container {margin: 0px 45px 0px 45px;}
+.elementor-355 .elementor-element.elementor-element-245b52f .elementor-divider-separator {border-top-style: solid;border-top-width: 1px;border-top-color: #fff;width: 5%;}
+.elementor-355 .elementor-element.elementor-element-245b52f .elementor-divider {text-align: center;padding-top: 6px;padding-bottom: 6px;}
+.elementor-355 .elementor-element.elementor-element-245b52f > .elementor-widget-container {margin: 40px 40px 40px 40px;}
+.elementor-355 .elementor-element.elementor-element-c7b1011 {text-align: center;}
+.elementor-355 .elementor-element.elementor-element-c7b1011.elementor-widget-heading .elementor-heading-title {color: #fff;}
+.elementor-355 .elementor-element.elementor-element-c7b1011 .elementor-heading-title {font-size: 24px;font-weight: 400;line-height: 2em;letter-spacing: 1.5px;}
+.elementor-355 .elementor-element.elementor-element-c7b1011 > .elementor-widget-container {margin: 0px 100px 0px 100px;}
 .elementor-355 .elementor-element.elementor-element-mmdcqna {padding: 60px 0px 60px 0px;}
 .elementor-355 .elementor-element.elementor-element-ecogpvs {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-ecogpvs.elementor-widget-heading .elementor-heading-title {color: #292929;}
@@ -131,7 +134,6 @@
 .elementor-355 .elementor-element.elementor-element-cdclnjx .elementor-icon i {transform: rotate(0deg);}
 .elementor-355 .elementor-element.elementor-element-cdclnjx .elementor-icon-box-wrapper {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-cdclnjx .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 16px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
-.elementor-355 .elementor-element.elementor-element-lxnjvop .elementor-spacer-inner {height: 10px;}
 .elementor-355 .elementor-element.elementor-element-mzzjlnz.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
 .elementor-355 .elementor-element.elementor-element-mzzjlnz.elementor-view-framed .elementor-icon, .elementor-355 .elementor-element.elementor-element-mzzjlnz.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
 .elementor-355 .elementor-element.elementor-element-mzzjlnz.elementor-view-framed .elementor-icon {background-color: #84c340;}
@@ -145,7 +147,19 @@
 .elementor-355 .elementor-element.elementor-element-mzzjlnz .elementor-icon i {transform: rotate(0deg);}
 .elementor-355 .elementor-element.elementor-element-mzzjlnz .elementor-icon-box-wrapper {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-mzzjlnz .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 16px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
-.elementor-355 .elementor-element.elementor-element-bgtmhzt .elementor-spacer-inner {height: 10px;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-framed .elementor-icon, .elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-framed .elementor-icon {background-color: #84c340;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-stacked .elementor-icon:hover {background-color: #84c340;color: #fff;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-framed .elementor-icon:hover, .elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-default .elementor-icon:hover {color: #84c340;border-color: #84c340;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-view-framed .elementor-icon:hover {background-color: #fff;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-position-right .elementor-icon-box-icon {margin-left: 20px;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-position-left .elementor-icon-box-icon {margin-right: 20px;}
+.elementor-355 .elementor-element.elementor-element-1f80f29.elementor-position-top .elementor-icon-box-icon {margin-bottom: 20px;}
+.elementor-355 .elementor-element.elementor-element-1f80f29 .elementor-icon {font-size: 32px;padding: 1em;}
+.elementor-355 .elementor-element.elementor-element-1f80f29 .elementor-icon i {transform: rotate(0deg);}
+.elementor-355 .elementor-element.elementor-element-1f80f29 .elementor-icon-box-wrapper {text-align: center;}
+.elementor-355 .elementor-element.elementor-element-1f80f29 .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 16px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
 .elementor-355 .elementor-element.elementor-element-tabocnv.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
 .elementor-355 .elementor-element.elementor-element-tabocnv.elementor-view-framed .elementor-icon, .elementor-355 .elementor-element.elementor-element-tabocnv.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
 .elementor-355 .elementor-element.elementor-element-tabocnv.elementor-view-framed .elementor-icon {background-color: #84c340;}
@@ -159,7 +173,6 @@
 .elementor-355 .elementor-element.elementor-element-tabocnv .elementor-icon i {transform: rotate(0deg);}
 .elementor-355 .elementor-element.elementor-element-tabocnv .elementor-icon-box-wrapper {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-tabocnv .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 16px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
-.elementor-355 .elementor-element.elementor-element-wbzdojx .elementor-spacer-inner {height: 10px;}
 .elementor-355 .elementor-element.elementor-element-engigvc.elementor-view-stacked .elementor-icon {background-color: #f8f8f8;color: #84c340;}
 .elementor-355 .elementor-element.elementor-element-engigvc.elementor-view-framed .elementor-icon, .elementor-355 .elementor-element.elementor-element-engigvc.elementor-view-default .elementor-icon {color: #f8f8f8;border-color: #f8f8f8;}
 .elementor-355 .elementor-element.elementor-element-engigvc.elementor-view-framed .elementor-icon {background-color: #84c340;}
@@ -173,7 +186,7 @@
 .elementor-355 .elementor-element.elementor-element-engigvc .elementor-icon i {transform: rotate(0deg);}
 .elementor-355 .elementor-element.elementor-element-engigvc .elementor-icon-box-wrapper {text-align: center;}
 .elementor-355 .elementor-element.elementor-element-engigvc .elementor-icon-box-content .elementor-icon-box-title {color: #292929;font-size: 16px;font-weight: 400;text-transform: uppercase;letter-spacing: 1px;}
-.elementor-355 .elementor-element.elementor-element-lgwumdv .elementor-spacer-inner {height: 10px;}
+.elementor-355 .elementor-element.elementor-element-e938515 .elementor-spacer-inner {height: 100px;}
 @media (max-width:1024px) {.elementor-355 .elementor-element.elementor-element-jmkaurx .elementor-heading-title {font-size: 45px;}
 	.elementor-355 .elementor-element.elementor-element-cxcmpdt {text-align: center;}
 	.elementor-355 .elementor-element.elementor-element-legksge .elementor-spacer-inner {height: 50px;}
@@ -183,11 +196,12 @@
 	.elementor-355 .elementor-element.elementor-element-ucqtwmr .elementor-spacer-inner {height: 50px;}
 	.elementor-355 .elementor-element.elementor-element-anvgfex .elementor-heading-title {font-size: 35px;}
 	.elementor-355 .elementor-element.elementor-element-hcmjsxe {text-align: center;}
-	.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 35px;}
-	.elementor-355 .elementor-element.elementor-element-lxnjvop .elementor-spacer-inner {height: 50px;}
-	.elementor-355 .elementor-element.elementor-element-bgtmhzt .elementor-spacer-inner {height: 50px;}
-	.elementor-355 .elementor-element.elementor-element-wbzdojx .elementor-spacer-inner {height: 50px;}
-	.elementor-355 .elementor-element.elementor-element-lgwumdv .elementor-spacer-inner {height: 50px;}}
+	.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 24px;line-height: 1.5em;}
+	.elementor-355 .elementor-element.elementor-element-5e8419b > .elementor-widget-container {margin: 0px 0px 0px 0px;}
+	.elementor-355 .elementor-element.elementor-element-245b52f > .elementor-widget-container {margin: 20px 20px 20px 20px;}
+	.elementor-355 .elementor-element.elementor-element-c7b1011 .elementor-heading-title {font-size: 18px;line-height: 1.5em;letter-spacing: 1.5px;}
+	.elementor-355 .elementor-element.elementor-element-c7b1011 > .elementor-widget-container {margin: 0px 0px 0px 0px;}
+	.elementor-355 .elementor-element.elementor-element-15559c0 {margin-top: 0px;margin-bottom: 0px;}}
 @media (max-width:767px) {.elementor-355 .elementor-element.elementor-element-arduvcg {padding: 40px 0px 40px 0px;}
 	.elementor-355 .elementor-element.elementor-element-jmkaurx .elementor-heading-title {font-size: 30px;}
 	.elementor-355 .elementor-element.elementor-element-wzrxkkb .elementor-heading-title {font-size: 26px;}
@@ -201,19 +215,19 @@
 	.elementor-355 .elementor-element.elementor-element-wkxtsyq > .elementor-element-populated {margin: 0px 0px 20px 0px;}
 	.elementor-355 .elementor-element.elementor-element-hcmjsxe {text-align: center;}
 	.elementor-355 .elementor-element.elementor-element-qjxjzhx .elementor-heading-title {font-size: 26px;}
-	.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 30px;}
+	.elementor-355 .elementor-element.elementor-element-5e8419b .elementor-heading-title {font-size: 18px;line-height: 1.5em;}
+	.elementor-355 .elementor-element.elementor-element-245b52f > .elementor-widget-container {margin: 10px 10px 10px 10px;}
+	.elementor-355 .elementor-element.elementor-element-c7b1011 .elementor-heading-title {font-size: 14px;line-height: 1.5em;letter-spacing: 1.5px;}
+	.elementor-355 .elementor-element.elementor-element-c7b1011 > .elementor-widget-container {margin: 0px 0px 0px 0px;}
 	.elementor-355 .elementor-element.elementor-element-ecogpvs .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-5181363a .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-611d2e8 {font-size: 20px;}
 	.elementor-355 .elementor-element.elementor-element-wjbhjqp .elementor-heading-title {font-size: 26px;}
 	.elementor-355 .elementor-element.elementor-element-cdclnjx .elementor-icon-box-icon {margin-bottom: 20px;}
-	.elementor-355 .elementor-element.elementor-element-lxnjvop .elementor-spacer-inner {height: 50px;}
 	.elementor-355 .elementor-element.elementor-element-mzzjlnz .elementor-icon-box-icon {margin-bottom: 20px;}
-	.elementor-355 .elementor-element.elementor-element-bgtmhzt .elementor-spacer-inner {height: 50px;}
+	.elementor-355 .elementor-element.elementor-element-1f80f29 .elementor-icon-box-icon {margin-bottom: 20px;}
 	.elementor-355 .elementor-element.elementor-element-tabocnv .elementor-icon-box-icon {margin-bottom: 20px;}
-	.elementor-355 .elementor-element.elementor-element-wbzdojx .elementor-spacer-inner {height: 50px;}
-	.elementor-355 .elementor-element.elementor-element-engigvc .elementor-icon-box-icon {margin-bottom: 20px;}
-	.elementor-355 .elementor-element.elementor-element-lgwumdv .elementor-spacer-inner {height: 50px;}}
+	.elementor-355 .elementor-element.elementor-element-engigvc .elementor-icon-box-icon {margin-bottom: 20px;}}
 @media (min-width:768px) {.elementor-355 .elementor-element.elementor-element-trebdfi {width: 37.193%;}
 	.elementor-355 .elementor-element.elementor-element-mcwoycn {width: 62.807%;}
 	.elementor-355 .elementor-element.elementor-element-qevarhe {width: 40.395%;}
