2019-09-01 change all email to AskFindersCoach@gmail.com
change all email to AskFindersCoach@gmail.com
edit logo replace text "EM Consulting" to "Finders Coach"

--- a/wp-content/uploads/elementor/css/post-355.css
+++ b/wp-content/uploads/elementor/css/post-355.css
@@ -237,7 +237,9 @@
 	.elementor-355 .elementor-element.elementor-element-33479388 {width: 20%;}
 	.elementor-355 .elementor-element.elementor-element-bb50631 {width: 79.998%;}
 	.elementor-355 .elementor-element.elementor-element-515fe60e {width: 20%;}
-	.elementor-355 .elementor-element.elementor-element-2360d2e6 {width: 79.998%;}}
+	.elementor-355 .elementor-element.elementor-element-2360d2e6 {width: 79.998%;}
+	.elementor-355 .elementor-element.elementor-element-682fb2c {width: 21.053%;}
+	.elementor-355 .elementor-element.elementor-element-9a0fc7c {width: 18.947%;}}
 @media (min-width:1025px) {.elementor-355 .elementor-element.elementor-element-arduvcg:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-arduvcg > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
 	.elementor-355 .elementor-element.elementor-element-rejxuiu:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-rejxuiu > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
 	.elementor-355 .elementor-element.elementor-element-a073725:not(.elementor-motion-effects-element-type-background), .elementor-355 .elementor-element.elementor-element-a073725 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-attachment: fixed;}
